<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ru.hh</groupId>
    <artifactId>hh-price</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <selenium.version>2.42.2</selenium.version>
        <jbehave.core.version>3.7.5</jbehave.core.version>
        <jbehave.web.version>3.5.5</jbehave.web.version>
        <jbehave.site.version>3.2</jbehave.site.version>
        <!--3.1.1-->
        <fluent.selenium.version>1.6.3</fluent.selenium.version>
        <testng.version>6.8.7</testng.version>
        <!-- 6.1.1 -->
        <reportng.version>1.1.4</reportng.version>
        <!-- 1.1.4 -->
        <junit.version>4.11</junit.version>
        <hamcrest.version>1.3</hamcrest.version>
        <spring.version>3.1.4.RELEASE</spring.version>
        <aspectj.version>1.6.5</aspectj.version>
        <slf4j.version>1.7.5</slf4j.version>
        <log4j.version>1.2.17</log4j.version>
        <logback.version>1.0.13</logback.version>
        <!-- JBehave plugin settings (jp.) -->
        <jp.generate.view.after.stories>true</jp.generate.view.after.stories>
        <jp.ignore.failures>false</jp.ignore.failures>
        <jp.meta.filter></jp.meta.filter>
        <jp.story.timeout.in.secs>300</jp.story.timeout.in.secs>
        <!-- 10 min -->
        <jp.threads>1</jp.threads>
        <jp.skip>false</jp.skip>
        <jp.stories>**/StoriesConfiguration.java</jp.stories>
        <jp.map.stories>**/MapStories.java</jp.map.stories>
        <!-- Running stories -->
        <config.browser>chrome</config.browser>
        <config.run.story.path>**/</config.run.story.path>
        <config.file.name.context>spring.xml</config.file.name.context>
        <config.url.base>http://hh.ru</config.url.base>
    </properties>

    <dependencies>

        <!-- JBehave -->

        <dependency>
            <groupId>org.jbehave</groupId>
            <artifactId>jbehave-core</artifactId>
            <version>${jbehave.core.version}</version>
        </dependency>

        <dependency>
            <groupId>org.jbehave</groupId>
            <artifactId>jbehave-core</artifactId>
            <version>${jbehave.core.version}</version>
            <classifier>resources</classifier>
            <type>zip</type>
        </dependency>

        <dependency>
            <groupId>org.jbehave.site</groupId>
            <artifactId>jbehave-site-resources</artifactId>
            <version>${jbehave.site.version}</version>
            <type>zip</type>
        </dependency>

        <dependency>
            <groupId>org.jbehave.web</groupId>
            <artifactId>jbehave-web-selenium</artifactId>
            <version>${jbehave.web.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.jbehave</groupId>
                    <artifactId>jbehave-core</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.seleniumhq.selenium</groupId>
                    <artifactId>selenium-java</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.jbehave</groupId>
            <artifactId>jbehave-spring</artifactId>
            <version>${jbehave.core.version}</version>
        </dependency>


        <!-- Selenium -->

        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.hamcrest</groupId>
                    <artifactId>hamcrest-core</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-server</artifactId>
            <version>${selenium.version}</version>
        </dependency>

        <dependency>
            <groupId>org.seleniumhq.selenium.fluent</groupId>
            <artifactId>fluent-selenium</artifactId>
            <version>${fluent.selenium.version}</version>
            <optional>true</optional>
            <exclusions>
                <exclusion>
                    <groupId>org.seleniumhq.selenium</groupId>
                    <artifactId>selenium-java</artifactId>
                </exclusion>
            </exclusions>
        </dependency>


        <!-- Testing -->

        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <version>${hamcrest.version}</version>
        </dependency>



        <!-- Spring framework -->

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
            <version>${spring.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- Logging -->

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>${logback.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <!--        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>1.1.1</version>
        </dependency>-->

    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.0</version>
                    <configuration>
                        <source>1.7</source>
                        <target>1.7</target>
                        <!--argLine>-XX:MaxPermSize=512m</argLine -->
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>2.4</version>
                </plugin>
                <!--This plugin's configuration is used to store Eclipse m2e settings
                    only. It has no influence on the Maven build itself. -->
                <plugin>
                    <groupId>org.eclipse.m2e</groupId>
                    <artifactId>lifecycle-mapping</artifactId>
                    <version>1.0.0</version>
                    <configuration>
                        <lifecycleMappingMetadata>
                            <pluginExecutions>
                                <!-- _____________________________________________________ -->
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>org.apache.maven.plugins</groupId>
                                        <artifactId>maven-dependency-plugin</artifactId>
                                        <versionRange>[2.1,)</versionRange>
                                        <goals>
                                            <goal>copy</goal>
                                            <goal>unpack</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <ignore></ignore>
                                    </action>
                                </pluginExecution>
                                <!-- _____________________________________________________ -->
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>org.jbehave</groupId>
                                        <artifactId>jbehave-maven-plugin</artifactId>
                                        <versionRange>[${jbehave.core.version},)</versionRange>
                                        <goals>
                                            <goal>unpack-view-resources</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <ignore></ignore>
                                    </action>
                                </pluginExecution>
                                <!-- _____________________________________________________ -->
                            </pluginExecutions>
                        </lifecycleMappingMetadata>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <resources>
            <resource>
                <directory>${basedir}/src/main/resources</directory>
                <filtering>false</filtering>
                <excludes>
                    <exclude>*.properties</exclude>
                </excludes>
            </resource>
            <resource>
                <directory>${basedir}/src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>*.properties</include>
                </includes>
            </resource>
            <resource>
                <directory>${basedir}/src/main/stories</directory>
                <filtering>false</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>unpack-resources-core</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>unpack</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/jbehave/view</outputDirectory>
                            <overWriteReleases>true</overWriteReleases>
                            <overWriteSnapshots>true</overWriteSnapshots>
                            <excludes>**/*.class</excludes>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>org.jbehave</groupId>
                                    <artifactId>jbehave-navigator</artifactId>
                                    <version>${jbehave.core.version}</version>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jbehave</groupId>
                <artifactId>jbehave-maven-plugin</artifactId>
                <version>${jbehave.core.version}</version>
                <executions>
                    <!--____________________________________________ -->
                    <execution>
                        <id>unpack-view-resources</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>unpack-view-resources</goal>
                        </goals>
                    </execution>
                    <!--____________________________________________ -->
                    <execution>
                        <id>embeddable-stories</id>
                        <phase>integration-test</phase>
                        <goals>
                            <goal>run-stories-as-embeddables</goal>
                        </goals>
                        <configuration>
                            <systemProperties>
                                <property>
                                    <name>JOURNAL_FIREFOX_COMMANDS</name>
                                    <value>true</value>
                                </property>
                                <property>
                                    <name>browser</name>
                                    <value>${config.browser}</value>
                                </property>
                                <property>
                                    <name>webdriver.chrome.driver</name>
                                    <value>${project.build.outputDirectory}/driver/${os.name}/${os.arch}/chromedriver</value>
                                </property>
                                <property>
                                    <name>run.story.path</name>
                                    <value>${config.run.story.path}</value>
                                </property>
                                <property>
                                    <name>file.name.context</name>
                                    <value>${config.file.name.context}}</value>
                                </property>
                            </systemProperties>
                            <includes>
                                <include>${jp.stories}</include>
                            </includes>
                            <excludes/>
                            <outputDirectory>${project.build.outputDirectory}/jbehave</outputDirectory>
                            <generateViewAfterStories>${jp.generate.view.after.stories}</generateViewAfterStories>
                            <ignoreFailureInStories>${jp.ignore.failures}</ignoreFailureInStories>
                            <ignoreFailureInView>${jp.ignore.failures}</ignoreFailureInView>
                            <storyTimeoutInSecs>${jp.story.timeout.in.secs}</storyTimeoutInSecs>
                            <threads>${jp.threads}</threads>
                            <skip>${jp.skip}</skip>
                            <metaFilters>
                                <metaFilter>${jp.meta.filter}</metaFilter>
                            </metaFilters>
                            <executorsClass>org.jbehave.core.embedder.executors.FixedThreadExecutors</executorsClass>
                            <!-- SameThreadExecutors , FixedThreadExecutors -->
                        </configuration>
                    </execution>
                    <!-- _____________________________________________________ -->
                    <execution>
                        <id>map-stories</id>
                        <phase>integration-test</phase>
                        <configuration>
                            <includes>
                                <include>${jp.map.stories}</include>
                            </includes>
                            <metaFilters>
                                <metaFilter>+ToDo *</metaFilter>
                                <metaFilter>+InProgress *</metaFilter>
                                <metaFilter>+Completed *</metaFilter>
                                <metaFilter>+Refactoring *</metaFilter>
                            </metaFilters>
                            <systemProperties>
                                <property>
                                    <name>java.awt.headless</name>
                                    <value>true</value>
                                </property>
                            </systemProperties>
                        </configuration>
                        <goals>
                            <goal>map-stories-as-embeddables</goal>
                        </goals>
                    </execution>
                    <!-- _____________________________________________________ -->
                    <!-- 					<execution>
                                            <id>report-stepdocs</id>
                                            <phase>integration-test</phase>
                                            <configuration>
                                                <includes>
                                                    <include>${jp.stories}</include>
                                                </includes>
                                            </configuration>
                                            <goals>
                                                <goal>report-stepdocs-as-embeddables</goal>
                                            </goals>
                                        </execution> -->
                    <!-- _____________________________________________________ -->
                </executions>
                <dependencies>
<!--                    <dependency>
                        <groupId>com.google.guava</groupId>
                        <artifactId>guava</artifactId>
                        <version>${google.guava.version}</version>
                    </dependency>-->




<!--                    <dependency>
                        <groupId>log4j</groupId>
                        <artifactId>log4j</artifactId>
                        <version>${log4j.version}</version>
                    </dependency>-->

                </dependencies>
            </plugin>
        </plugins>
    </build>

</project>